--- a/my/templates/proyectoManager.html
+++ b/my/templates/proyectoManager.html
@@ -8,8 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="text/javascript">
 	//<![CDATA[
-	jQuery(document)
-			.ready(
+	jQuery(document)			.ready(
 					function() {
 
 						var grid = jQuery("#list")
@@ -925,7 +924,7 @@
 				$("#btAgregar").button();
 				$("#btModificar").button();
 				$("#btConsultar").button();
-				
+				$("#btAgregarMiembros").button();
 			</script>
 		</div></td>
 
