--- a/my/templates/usuarioManager.html
+++ b/my/templates/usuarioManager.html
@@ -150,7 +150,8 @@
 					<td style="padding: 0.4em;"><label for="Nuevo"
 						style="display: block">Pass Nuevo</label> <input type="password"
 						name="passNuevo" id="passNuevo"
-						style="display: block; margin-bottom: 12px; padding: 0.4em;" /></td>
+						style="display: block; margin-bottom: 12px; padding: 0.4em;" />
+					</td>
 					<td style="padding: 0.4em;"><label for="Actual"
 						style="display: block">Confirmar Pass</label> <input
 						type="password" name="passActual" id="passActual"
