--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -3,7 +3,8 @@
 <header>
 
 	
-	<link rel="stylesheet" type="text/css" media="screen" href="/static/css/redmond/jquery-ui-1.9.2.custom.css" />
+	<link rel="stylesheet" type="text/css" media="screen" 
+		href="/static/css/redmond/jquery-ui-1.9.2.custom.css" />
 	<link rel="stylesheet" type="text/css" media="screen"
 		href="/static/css/ui.jqgrid.css" />
 	<!-- <link rel="stylesheet" type="text/css" href="/static/css/stylem.css" />-->
@@ -52,12 +53,98 @@
 	</div>
 	<img src="/static/images/blue-23957_640.png" width="200px"/>
 	<h6>Web Aplication Project Manager</h6>
-	
+	<div style="float: center; background-color: #FFFFFF;">
+			<table width="30%" style="float: right;">
+				<tr>
+					<div id="sectorProyectoComboBox"><td>
+						<h6 align="right" >Proyecto:</h6>
+					</td>
+					<td><select id="proyectosUsuario"
+						style="display: block; margin-bottom: 12px; padding: 0.4em; width: 100%;"
+						class="ui-widget-content ui-corner-all">
+							<option value="activo">Ninguno</option>
+							
+					</select></td></div>
+				</tr>
+			</table>
+		</div>
 	
 	
 	</div>
 	<HR style="color:#659EC7 ;width: 100%; margin: 0; padding: 0;"></hr>
-	
+	<script>
+		var valorenSesion={{session['idProyecto']}};
+		$.getJSON("http://localhost:5000/listarProyectosComboBox", function(atribs) {
+		  
+			var select = $('#proyectosUsuario');
+			var options = select.prop('options');
+			//alert ('hola')
+			
+			$('option', select).remove();
+			if(valorenSesion==0){
+				options[options.length] = new Option('Seleccione Proyecto',0);
+			}
+				$.each(atribs, function(index,atrib) { //val,text
+				    options[options.length] = new Option(atrib.nombreProyecto,atrib.idProyecto);
+				});
+			//valorEnSesion={{session['idProyecto']}};
+			select.val(valorenSesion);
+			elegirSesionProyecto(select.val())
+			
+		 });
+		function elegirSesionProyecto(idProyecto){
+				valorelegido=$('#proyectosUsuario').val();
+				//alert('valor elegido' + valorelegido)
+				//alert('valor en sesion '+ valorenSesion)
+				if(valorenSesion!=valorelegido){ //si es que el valor del combo actual es diferente  
+													//del seleccionado, se hace el post y reload de la pagina, la primera vez el de la sesion es 0
+				valorenSesion=valorelegido;
+				$.post('/seleccionarProyectoSesion/',
+						{ /* se indican los parametros*/
+							idProyecto : idProyecto
+						},
+						function(data, status) {
+							/* funcion que maneja el resultruc : $("#ruc").val(),ado de la invocación */
+		
+							/* si hay error se muestra el mensaje*/
+							if (data.substring(0, 1) == 't') {
+								mostrarMensaje(
+										"Error",data.substring(2));
+								/* se indica que no hubieron errores */
+							}
+							/* se indicar la recarga de la tabla */
+							//location.reload();
+							var pathname = window.location.pathname;
+							switch (pathname){
+								case '/faseManager/':
+									
+									$("#listaFases").trigger("reloadGrid");
+									break;
+								case '/usuarioManager/':
+									$('#list').trigger("reloadGrid");
+									break;
+								case'/proyectoManager/':
+									$('#list').trigger("reloadGrid");
+									break;
+								case'/tipoItemManager/':
+									cargarFasesEnComboBox();
+									break;
+								default:
+									alert('no te olvides agregar para que actualice el jqgrid en el if de base')
+							}
+							
+						});
+				
+				}
+		}
+		$('#proyectosUsuario').change(function() {
+			    $("#proyectosUsuario option[value='0']").remove();
+			  elegirSesionProyecto($('#proyectosUsuario').val())
+		});
+		//var selectedOption = 'green';
+
+		
+	</script>
 	<div id="menuBarr" css=".ui-menu">
 			<ul id="menu">
 			<h2>Menu</h2>
@@ -87,7 +174,7 @@
 				<li><a href="#">Gestion de Cambios</a>
 					<ul>
 						<li><a href="#">Linea Base Manager</a>
-						<li><a href="#">Tipo Item Manager</a>
+						<li><a href="{{url_for('tipoItemManager')}}">Tipo Item Manager</a>
 					</ul></li> {% else %} {% endif %}
 			</ul>
 	</div>
