--- a/my/templates/fasesManager.html
+++ b/my/templates/fasesManager.html
@@ -24,7 +24,7 @@
 											url : 'http://localhost:5000/listarFases',
 											datatype : "json",
 											mtype : "get",
-											postData:{idProyecto:'1'},
+											postData:{idProyecto: retornaValorenSesion()},
 											colNames : [ 'ID Fases',
 													'Nombre Fase', 'Fecha Inicio', 'Fecha Finalizacion',
 													'Descripcion', 'Estado', 'Id de Proyecto' ],
@@ -117,6 +117,11 @@
 </style>
 
 <script type="text/javascript">
+function retornaValorenSesion() {
+	//alert('valor en sesion' + valorenSesion)
+	return valorenSesion
+}
+	var gridDelMomento=jQuery("#listaFases");
 	jQuery(function($) {
 		$.datepicker.regional['es'] = {
 			closeText : 'Cerrar',
@@ -243,7 +248,7 @@
 												estado : $("#estado")
 														.val(),
 												
-												idProyecto :'1'
+												idProyecto :retornaValorenSesion()
 														},
 														function(data, status) {
 															/* funcion que maneja el resultruc : $("#ruc").val(),ado de la invocación */
@@ -302,9 +307,7 @@
 															.val(),
 													estado : $("#estado")
 															.val(),
-													idProyecto : $(
-															"#idProyecto")
-															.val()
+													idProyecto :retornaValorenSesion()
 														},
 														function(data, status) {
 
@@ -355,7 +358,7 @@
 		$("#datepicker2").val(rowdata.fechaFinalizacion);
 		$("#descripcion").val(rowdata.descripcion);
 		$("#estado").val(rowdata.estado);
-		$("#idProyecto").val(rowdata.idProyecto);
+		$("#idProyecto").val(valorenSesion);
 		
 
 	}
