Pusheado iter3 en clase

--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -164,6 +164,7 @@
 						<li><a href="{{url_for('miembroManager')}}">Administrar Miembros</a>
 						<li><a href="#">Administrar Comite</a>
 						<li><a href="{{url_for('rolProyectoManager')}}">Administrar Roles</a>
+						<li><a href="{{url_for('rolUsuarioManager')}}">Administrar Usuario Roles</a>
 					</ul>
 				
 				</li>
