--- a/my/templates/proyectoManager2.html
+++ b/my/templates/proyectoManager2.html
@@ -10,255 +10,6 @@
 jQuery(document).ready(
 function() {
 
-	
-	var gridFase = jQuery("#listaFases")
-	.jqGrid(
-			{
-
-				// datatype : "local",
-				// data:mydata,
-				url : 'http://localhost:5000/listarFases',
-				datatype : "json",
-				mtype : "get",
-				postData:{idProyectoPD: '0'},
-				colNames : [ 'ID Fases',
-						'Nombre Fase', 'Fecha Inicio', 'Fecha Finalizacion',
-						'Descripcion', 'Estado', 'Id de Proyecto' ],
-				colModel : [
-						{
-							name : 'idFase',
-							index : 'idFase',
-							hidden : true
-						},
-						
-						{
-							name : 'nombreFase',
-							index : 'nombreFase',
-							width : 200
-						},
-						{
-							name : 'fechaInicio',
-							index : 'fechaInicio',
-							formatter: 'date',
-				            sorttype: 'date',
-				            datefmt: 'd/m/Y',
-				            formatoptions: { srcformat: 'Y-m-d', newformat: 'd/m/Y' },
-							search:false
-						},{
-							name : 'fechaFinalizacion',
-							index : 'fechaFinalizacion',
-							formatter: 'date',
-				            sorttype: 'date',
-				            datefmt: 'd/m/Y',
-				            formatoptions: { srcformat: 'Y-m-d', newformat: 'd/m/Y' },
-							search:false
-						},
-						{
-							name : 'descripcion',
-							index : 'descripcion',
-							hidden : true
-						},
-						{
-							name : 'estado',
-							index : 'estado',
-							
-						},
-						{
-							name : 'idProyecto',
-							index : 'idProyecto',
-							hidden : true
-						}
-
-				],
-				sortname : 'nombreFase',
-				viewrecords : true,
-				rownumbers : true,
-				sortorder : "desc",
-				ignoreCase : true,
-				pager : '#pager',
-				caption : "Fases",
-				jsonReader : {
-					root : "invdata",
-					page : "currpage",
-					total : "totalpages",
-					records : "totalrecords",
-					
-					repeatitems : false,
-					id : "idUsuario"
-				}
-
-			}).jqGrid('navGrid', '#pagerFases', {
-		edit : false,
-		add : false,
-		del : false,
-		search : false,
-		refresh : true
-	});
-	gridFase.jqGrid('filterToolbar', {
-	stringResult : true,
-	searchOnEnter : false,
-	defaultSearch : "cn"
-	});
-
-	
-	$("#dialogo-fases")
-	.dialog(
-			{
-				autoOpen : false,
-				width : 'auto',
-				height : '500',
-				overflow : scroll,
-				modal : true,
-				show : {
-					effect : 'fade',
-					duration : 400
-				},
-				hide : {
-					effect : 'fade',
-					duration : 350
-				},
-				resizable : false,
-				buttons : {
-					/* funcion asociado al boton aceptar */
-					"Nueva" : function(){agregarFase()},
-					"Modificar" : function(){modificarFase()},
-					"Consultar" : function(){consultarFase()},
-				}
-	});
-	var banderaFase;
-	$("#dialogo-datos-fase")
-	.dialog(
-			{
-				autoOpen : false,
-				modal : true,
-				resizable : false,
-				width : 550,
-				show: {effect: 'fade', duration: 400},
-				hide: {effect: 'fade', duration: 350},
-				buttons : {
-					/* funcion asociado al boton aceptar */
-					"Aceptar" : function() {
-						/* si el dato es nuevo se llamar a la url para agregar */
-						
-						if (getBanderaFase() == 1) {
-							/* se indica la URL */
-							if (controlFase(true) == 1) {
-								mostrarMensaje("Error",
-										"Campos completados incorrectamente");
-							} else {
-								
-								$.post('/agregarFase/',{ 
-									/* se indican los parametros*/
-										nombreFase : $(
-												"#nombreFase")
-												.val(),
-										fechaInicio : $(
-												"#datepickerFase")
-												.val(),
-										fechaFinal : $(
-												"#datepickerFase2")
-												.val(),
-										descripcion: $("#descripcionFase")
-												.val(),
-										estado : $("#estadoFase")
-												.val(),
-										
-										idProyecto :valorProyectoSeleccion()
-												},
-												function(data, status) {
-													/* funcion que maneja el resultruc : $("#ruc").val(),ado de la invocación */
-
-													/* si hay error se muestra el mensaje*/
-													if (data.substring(
-															0, 1) == 't') {
-														mostrarMensaje(
-																"Error",
-																"Los datos no se han podido guardar:\n"
-																		+ data
-																				.substring(2));
-														/* se indica que no hubieron errores */
-													} else {
-														$(
-																"#dialogo-datos-fase")
-																.dialog(
-																		"close");
-														mostrarMensaje(
-																"Exito",
-																data
-																		.substring(2));
-													}
-													/* se indicar la recarga de la tabla */
-													$('#listaFases')
-															.trigger(
-																	"reloadGrid");
-												});
-							}
-
-							/* si el dato se modifica se llama a la url para modificar*/
-						} else if (getBanderaFase() == 2) {
-							if (controlFase(false) == 1) {
-								mostrarMensaje("Error",
-										"Campos completados incorrectamente");
-							} else {
-
-								/* se indica la url */
-								$
-										.post(
-												'/modificarFase/',
-												{
-											idFase:$(
-													"#idFase")
-													.val(),
-											nombreFase : $(
-													"#nombreFase")
-													.val(),
-											fechaInicio : $(
-													"#datepickerFase")
-													.val(),
-											fechaFinal : $(
-													"#datepickerFase2")
-													.val(),
-											descripcion: $("#descripcionFase")
-													.val(),
-											estado : $("#estadoFase")
-													.val(),
-											idProyecto :valorProyectoSeleccion()
-												},
-												function(data, status) {
-
-													if (data.substring(
-															0, 1) == 't') {
-														mostrarMensaje(
-																"Error",
-																"Los datos no se han podido modificar:\n"
-																		+ data
-																				.substring(2));
-													} else {
-														$(
-																"#dialogo-datos-fase")
-																.dialog(
-																		"close");
-														mostrarMensaje(
-																"Exito",
-																"Los datos han sido modificados");
-													}
-													$('#listaFases')
-															.trigger(
-																	"reloadGrid");
-												});
-							}
-						} else if (getBanderaFase() == 3) {/*consultar*/
-							$(this).dialog("close");
-						}
-					},
-					"Cancelar" : function() {
-						$(this).dialog("close");
-					}
-				}
-			});
-
-	
-	
 	var gridProyecto = jQuery("#list")
 			.jqGrid(
 					{
@@ -898,13 +649,6 @@ $('#dialogo-agregar-miembros')
 	$(document).ready(function() {
 		$("#datepicker2").datepicker();
 	});
-	$(document).ready(function() {
-		$("#datepickerFase").datepicker();
-	});
-	
-	$(document).ready(function() {
-		$("#datepickerFase2").datepicker();
-	});
 </script>
 
 <!-- Formulario HTML para la carga de datos a ser inicializado por JqGrid -->
@@ -1020,155 +764,6 @@ $('#dialogo-agregar-miembros')
 	var banderita;
 	var yaentro;
 	/* inicialización del dialogo JQuery que permite tomar los datos de cliente */
-	function valorProyectoSeleccion(){
-		var rowProyecto = $('#list').jqGrid('getGridParam', 'selrow');
-		if (rowProyecto == null) {
-			return '0';
-		}
-		var rowdata = $('#list').getRowData(rowProyecto);
-		return rowdata.idProyecto;
-	}
-	
-	function abrirDialogoFases()
-	{
-		var rowProyecto = $('#list').jqGrid('getGridParam', 'selrow');
-		if (rowProyecto == null) {
-			mostrarMensaje("Atencion",
-					"Seleccione el proyecto a cual administrar Fases ");
-			return;
-		}
-		var rowdata = $('#list').getRowData(rowProyecto);
-		setGridFase(rowdata); 
-		$('#dialogo-fases').dialog("open");
-		
-	}
-	
-	function setGridFase(rowdata) {
-		
-		$('#listaFases').jqGrid("getGridParam", "postData").idProyectoPD=rowdata.idProyecto;
-		$('#listaFases').trigger("reloadGrid");
-		
-	}
-	
-	function getBanderaFase(){
-		return banderaFase;
-		
-	}
-	
-	function agregarFase() {
-		banderaFase=1;
-		$("#idFase").val("");
-		$("#nombreFase").val("");
-		$("#datepickerFase").val("");
-		$("#datepickerFase2").val("");
-		$("#descripcionFase").val("");
-		$("#estadoFase").val("");
-		$("#idProyectoFase").val("");
-		/* se llama al dialogo de captura de datos */
-		setCamposDisabledFase(false);
-		//$.enmascarar();
-		if(valorProyectoSeleccion()!=0){
-			$("#dialogo-datos-fase").dialog("open");
-		}else{
-			mostrarMensaje("Error", "Debe seleccionar un proyecto para agregar una fase")
-		}
-		
-	}
-	function modificarFase() {
-		banderaFase=2;
-		/* se comprueba que hay un dato seleccionado para modificar */
-		var row = $('#listaFases').jqGrid('getGridParam', 'selrow');
-		if (row == null) {
-			mostrarMensaje("Atencion", "Seleccione la fila a modificar");
-			return;
-		}
-		var rowdata;
-		/* se cargan los elementos HTML segun la fila seleccionada*/
-		cargarFormFase(rowdata, row);
-		/*se habilita la edicion*/
-		setCamposDisabledFase(false);
-		/* se llama al dialogo para modificar los datos */
-		$("#dialogo-datos-fase").dialog("open");
-		
-	}
-	function consultarFase() {
-		banderaFase=3;
-		/* se comprueba que hay un dato seleccionado para consultar */
-		var row = $('#listaFases').jqGrid('getGridParam', 'selrow');
-		if (row == null) {
-			mostrarMensaje("Atencion", "Seleccione la fila a consultar");
-			return;
-		}
-		var rowdata;
-		/* se cargan los elementos HTML segun la fila seleccionada*/
-		cargarFormFase(rowdata, row);
-		/*se inhabilita la edicion*/
-		setCamposDisabledFase(true);
-		/* se llama al dialogo para modificar los datos */
-		$("#dialogo-datos-fase").dialog("open");
-	
-	}
-	function controlFase(esNuevo) {
-		$("#nombreFase").css('border-color', 'skyblue');
-		$("#datepickerFase").css('border-color', 'skyblue');
-		$("#datepickerFase2").css('border-color', 'skyblue');
-		$("#descripcionFase").css('border-color', 'skyblue');
-		$("#estadoFase").css('border-color', 'skyblue');
-		
-		var error = 0
-		var len;
-
-		len = $("#nombreFase").val().trim().length;
-		if (len > 20 || len <= 0) {
-			$("#nombreFase").css('border-color', 'red');
-			error = 1;
-		}
-
-		len = document.getElementById("descripcionFase").value.trim().length;
-		//len=$("#observacion").val().trim().length;
-		if (len > 50 || len <= 0) {
-			$("#descripcionFase").css('border-color', 'red');
-			error = 1;
-		}
-		len = document.getElementById("datepickerFase").value.trim().length;
-		//len=$("#observacion").val().trim().length;
-		if (len <= 0) {
-			$("#datepickerFase").css('border-color', 'red');
-			error = 1;
-		}
-		
-		len = document.getElementById("datepickerFase2").value.trim().length;
-		//len=$("#observacion").val().trim().length;
-		if (len <= 0) {
-			$("#datepickerFase2").css('border-color', 'red');
-			error = 1;
-		}
-		return error;
-	}
-	
-	function setCamposDisabledFase(habilitar) {
-		
-		$("#idFase").attr('disabled', habilitar);
-		$("#nombreFase").attr('disabled', habilitar);
-		$("#datepickerFase").attr('disabled', habilitar);
-		$("#datepickerFase2").attr('disabled', habilitar);
-		$("#descripcionFase").attr('disabled', habilitar);
-		$("#estadoFase").attr('disabled', habilitar);
-		$("#idProyectoFase").attr('disabled', habilitar);
-	}
-	
-	function cargarFormFase(rowdata, row) {
-		rowdata = $('#listaFases').getRowData(row);
-		$("#idFase").val(rowdata.idFase);
-		$("#nombreFase").val(rowdata.nombreFase);
-		$("#datepickerFase").val(rowdata.fechaInicio);
-		$("#datepickerFase2").val(rowdata.fechaFinalizacion);
-		$("#descripcionFase").val(rowdata.descripcion);
-		$("#estadoFase").val(rowdata.estado);
-		$("#idProyectoFase").val(valorProyectoSeleccion());
-		
-
-	}
 
 	function abrirDialogoMiembros() {
 
@@ -1380,66 +975,13 @@ $('#dialogo-agregar-miembros')
 </script>
 <div id='msgbox' title='' style='display: none'></div>
 
-<div id="dialogo-fases" title="Administrar fases de Proyecto">
-	<table id="listaFases"></table>
-	<div id="pagerFases"></div>
-</div>
-<div id="dialogo-datos-fase" title="Datos de Fase">
-	<form title="(*) campos obligatorios">
-		<fieldset class="fieldset">
-			<input type="hidden" name="idFase" id="idFase" />
-			<table>
-				<tr>
-					<td><label for="nombreFase" style="display: block">*Nombre Fase</label> 
-						<input type="text" name="nombreFase"
-						id="nombreFase" class="text ui-widget-content ui-corner-all"
-						style="display: block; margin-bottom: 12px; padding: 0.4em; width: 80%;" />
-					</td>
-				</tr>
-				
-				<tr>
-					<td>
-						<label for="fechaInicio" style="display: block">*Fecha de Inicio</label>
-						 <input type="text" name="datepickerFase" id="datepickerFase" readonly="readonly"
-						class="text ui-widget-content ui-corner-all"
-						style="display: block; margin-bottom: 12px; padding: 0.4em; width: 100%;" />
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<label for="fechaFinalizacion" style="display: block">*Fecha de Finalizacion</label> 
-						<input type="text" name="datepickerFase2" id="datepickerFase2" readonly="readonly"
-						class="text ui-widget-content ui-corner-all"
-						style="display: block; margin-bottom: 12px; padding: 0.4em; width: 100%;" />
-					</td>
-						
-				</tr>
-				<tr>
-					<td><label for="descripcion" style="display: block">*Descripcion</label>
-						<textarea id="descripcionFase"
-							class="text ui-widget-content ui-corner-all"
-							style="display: block; margin-bottom: 12px; padding: 0.4em; width: 80%;">
-						</textarea></td>
-					<td><label for="estado" style="display: block">*Estado</label>
-						<select id="estadoFase"
-						style="display: block; margin-bottom: 12px; padding: 0.4em; width: 100%;"
-						class="ui-widget-content ui-corner-all">
-							<option value="desarrollo">Desarrollo</option>
-							<option value="activo">Activo</option>
-							<option value="finalizado">Finalizado</option>
-					</select></td>
-					<input type="hidden" name="idProyectoFase" id="idProyectoFase" />
-				</tr>
-			</table>
-		</fieldset>
-	</form>
-</div>
-
 
 <div id="dialogo-agregar-miembros" title="Agregar Miembros a Proyecto">
 	<table id="listMiembros"></table>
 	<div id="pagerMiembros"></div>
 </div>
+
+
 
 <div style="margin-left: auto; margin-right: auto; width: 60%;">
 	<h2>Administracion de Proyectos</h2>
@@ -1453,16 +995,12 @@ $('#dialogo-agregar-miembros')
 	<input id="btConsultar" type="button" name="consultar"
 		value="Consultar" onclick='consultar()' /> <input
 		id="btAgregarMiembros" type="button" name="agregarMiembros"
-		value="Agregar Miembros" onclick='abrirDialogoMiembros()' />
-		<input
-		id="btFases" type="button" name="btFases"
-		value="Administrar Fases" onclick='abrirDialogoFases()' /> <br></br>
+		value="Agregar Miembros" onclick='abrirDialogoMiembros()' /> <br></br>
 	<script>
 		$("#btAgregar").button();
 		$("#btModificar").button();
 		$("#btConsultar").button();
 		$("#btAgregarMiembros").button();
-		$("#btFases").button();
 	</script>
 </div>
 
